--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "eslint": "^6.8.0",
     "prettier": "^2.0.5",
     "prettier-plugin-apex": "^1.4.0"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
