--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
             "path": "force-app",
             "default": true,
             "package": "OrgApexlogger",
-            "versionName": "ver 1.0",
-            "versionNumber": "1.0.0.NEXT"
+            "versionName": "ver 1.1",
+            "versionNumber": "1.1.0.NEXT"
         }
     ],
     "namespace": "",
@@ -13,6 +13,8 @@
     "sourceApiVersion": "48.0",
     "packageAliases": {
         "OrgApexlogger": "0Ho6F000000GmwFSAS",
-        "OrgApexlogger@1.0.0-1": "04t6F000004HAgkQAG"
+        "OrgApexlogger@1.0.0-1": "04t6F000004HAgkQAG",
+        "OrgApexlogger@1.1.0-1": "04t6F000004HAjtQAG",
+        "OrgApexlogger@1.1.0-2": "04t6F000004HAjyQAG"
     }
 }
