--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -12,9 +12,7 @@
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "48.0",
     "packageAliases": {
-        "OrgApexlogger": "0Ho6F000000GmwFSAS",
-        "OrgApexlogger@1.0.0-1": "04t6F000004HAgkQAG",
-        "OrgApexlogger@1.1.0-1": "04t6F000004HAjtQAG",
-        "OrgApexlogger@1.1.0-2": "04t6F000004HAjyQAG"
+        "OrgApexlogger": "0Ho2v000000Gmt1CAC",
+        "OrgApexlogger@1.1.0-1": "04t2v000007GQUvAAO"
     }
 }
