--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,6 @@ Thumbs.db
 ehthumbs.db
 [Dd]esktop.ini
 $RECYCLE.BIN/
-sfdx-project.json
-scripts/操作记录.txt
+
+# sfdx-project.json
+# scripts/操作记录.txt
